// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarDatum 1`] = `
.c0 {
  fill: rgb(0,0,0);
}

.c0:hover {
  fill: rgb(0,0,0);
}

<rect
  class="bar c0"
  height="10"
  width="10"
  x="0"
  y="0"
/>
`;

exports[`BarDatum:onMouseEnter show tooltip 1`] = `
.c0 {
  fill: rgb(0,0,0);
}

.c0:hover {
  fill: rgb(0,0,0);
}

<svg>
  <rect
    class="bar c0"
    height="10"
    width="10"
    x="0"
    y="0"
  />
</svg>
`;

exports[`BarDatum:onMouseLeave hide tooltip 1`] = `
.c0 {
  fill: rgb(0,0,0);
}

.c0:hover {
  fill: rgb(0,0,0);
}

<svg>
  <rect
    class="bar c0"
    height="10"
    width="10"
    x="0"
    y="0"
  />
</svg>
`;
